==> alanbjohnston/PiSSTVpp/picosstvpp/picosstvpp.cpp <==
#include "picosstvpp.h"

void picosstvpp_begin(int pin) {
	
//	     Serial.println(micros() - sstv_micro_timer);	
  sstv_pwm_pin = pin;	
//  delay(10000);	
  Serial.begin(115200);	
  Serial.println("picosstvpp v0.5 starting");	
//  show_dir4();	
//  load_files();
  LittleFS.remove("/cam.pwm");
  LittleFS.remove("/sstv_image_1_320_x_240.jpg");
  LittleFS.remove("/sstv_image_2_320_x_240.jpg");
//  LittleFS.remove("/cam2.bin");
  LittleFS.remove("/cam.bin");
	
  Serial.println("Deleted .bin and .pwm files");	
  show_dir4();
		

}

void picosstvpp() {
	
    g_rate = WRAP * 4400; //RATE;	
  float multiplier;
  int wrap = WRAP;  // was 10; // 5;
  int dds_pin_slice;
  pwm_config dds_pwm_config;
  sstv_period = 1E6 / g_rate;  // clock
  char octet;
  byte lower;
  byte upper;
  Serial.println("Playing PWM file");	

	 
  int  dds_pwm_pin = 26;
   
//    multiplier = 133E6 / (clock * (wrap + 1));
    multiplier = 133E6 / (g_rate * (wrap + 1));
//    multiplier = 125E6 / (clock * (wrap + 1));
	
//    isr_period = (int) ( 1E6 / clock + 0.5);
    
    Serial.printf("Pico PWM Playback v0.5 begin\nClock: %d Wrap: %d Multiplier: %4.1f Period: %d\n", g_rate, wrap, multiplier, sstv_period);

    gpio_set_function(dds_pwm_pin, GPIO_FUNC_PWM);
    dds_pin_slice = pwm_gpio_to_slice_num(dds_pwm_pin);

    dds_pwm_config = pwm_get_default_config();
    pwm_config_set_clkdiv(&dds_pwm_config, multiplier); // was 100.0 50 75 25.0); // 33.333);  // 1.0f
    pwm_config_set_wrap(&dds_pwm_config, wrap); // 3 
    pwm_init(dds_pin_slice, &dds_pwm_config, true);
    pwm_set_gpio_level(dds_pwm_pin, 0); // (dds_pwm_config.top + 1) * 0.5);
  
//    Serial.printf("PWM config.top: %d\n", dds_pwm_config.top);
	
//  delay(1000);	 
	
// while (true) {	
	
//  output_file = LittleFS.open("/cam.pwm", "r");
	
  prompt_count_max = 4 * 1E6 / sstv_period;
  prompt_count = 0;	
	
  sstv_micro_timer = micros();	
	
    char *protocol; 
    int option;
    sstv_stop = false;
    sstv_stop_write = false;

    g_protocol = 56; //Scottie 2
/*	
    while ((option = getopt(argc, argv, "r:p:")) != -1) {
        switch (option) {
            case 'r':
                g_rate = (atoi(optarg));
                break;
            case 'p':
                protocol = optarg;
                break;
        }
    }

    //Set VIS codes
    if ( strcmp(protocol, "m1") == 0 ) {
        g_protocol = 44; //Martin 1
    }
    else if ( strcmp(protocol,"m2") == 0) {
        g_protocol = 40; //Martin 2
    }
    else if ( strcmp(protocol,"s1") == 0) {
        g_protocol = 60; //Scottie 1
    }
    else if ( strcmp(protocol,"s2") == 0) {
        g_protocol = 56; //Scottie 2
    }
    else if ( strcmp(protocol,"sdx") == 0) {
        g_protocol = 76; //Scottie DX
    }
    else if ( strcmp(protocol,"r36") == 0) {
        g_protocol = 8; //Robot 36
    }
    else {
        printf("Unrecognized protocol option %s, defaulting to Martin 1...\n\n", protocol);
        g_protocol = 44;
    }
*/

    // locals
    uint32_t starttime = millis();	 // time(NULL) ;	
    uint8_t ft ; 
    char inputfile[255], outputfile[255] ;
    
    // string hygeine
    memset( inputfile  , 0 , 255 ) ;
    memset( outputfile , 0 , 255 ) ;
    
    // assign values to globals

    double temp1, temp2, temp3 ;
    temp1 = (double)( 1 << (BITS - 1) ) ;
    temp2 = VOLPCT / 100.0 ;
    temp3 = temp1 * temp2 ;
    g_scale = (uint32_t)temp3 ;
    
    g_twopioverrate = 2.0 * M_PI / g_rate ;
    g_uspersample = 1000000.0 / (double)g_rate ;

    g_theta = 0.0 ;
    g_samples = 0.0 ;
    g_fudge = 0.0 ;

    Serial.printf( "Constants check:\n" ) ;
    Serial.printf( "      rate = %d\n" , g_rate ) ;
    Serial.printf( "  VIS code = %d\n" , g_protocol);
#ifndef SSTV_PWM		
    Serial.printf( "      BITS = %d\n" , BITS ) ;
    Serial.printf( "    VOLPCT = %d\n" , VOLPCT ) ; 
    Serial.printf( "     scale = %d\n" , g_scale ) ;
#endif	
    Serial.printf( "   us/samp = %f\n" , g_uspersample ) ;
    Serial.printf( "   2p/rate = %f\n\n" , g_twopioverrate ) ;
/*    
    // set filenames    
    strncpy( inputfile , argv[optind] , strlen( argv[optind] ) ) ;
    ft = filetype( inputfile ) ;
    if ( ft == FILETYPE_ERR ) 
    {
        printf( "Exiting.\n" ) ;
        return 2 ;
    }
    
    strncpy( outputfile, inputfile , strlen( inputfile ) ) ;
    
#ifdef AUDIO_AIFF    
    strcat( outputfile , ".aiff" ) ;
#endif
#ifdef AUDIO_WAV    
    strcat( outputfile , ".wav" ) ;
#endif
    
    printf( "Input  file is [%s].\n" , inputfile ) ;
    printf( "Output file is [%s].\n" , outputfile ) ;
    
    // prep
    
    g_imgfp = fopen( inputfile , "r" ) ;
    g_outfp = fopen( outputfile , "w" ) ;
    printf( "FILE ptrs opened.\n" ) ;
    
    if ( ft == FILETYPE_JPG ) 
    { g_imgp = gdImageCreateFromJpeg( g_imgfp ) ; }
    else if ( ft == FILETYPE_PNG ) 
    { g_imgp = gdImageCreateFromPng( g_imgfp ) ; }
    else {
        printf( "Some weird error!\n" ) ;
        return 3 ;
    }    
*/    
    input_file = LittleFS.open("/cam.bin", "r");
#ifdef WAV	
    output_file = LittleFS.open("/cam.wav", "w+");	
#endif	
#ifdef SSTV_PWM	
//    output_file = LittleFS.open("/cam.pwm", "w+");	
#endif	
/*	
    if (output_file)
      Serial.printf( "Output file opened.\n" );
    else
      Serial.printf( "Error opening output file.\n" );	    
*/
    // go!

    addvisheader() ;
/**/    
    //Selects audio format mode
    switch (g_protocol) {
        case 44: //Martin 1
            buildaudio_m(457.6);
            break;
        case 40: //Martin 2
            buildaudio_m(228.8);
            break;
        case 60: //Scottie 1
            buildaudio_s(432.0);
            break;
        case 56: //Scottie 2
//            buildaudio_s(275.2);
             buildaudio_s(275.1);
		    
//	     buildaudio_s(274.0);  // was 274.4 no stripe (vertical band), 274.7 - 1 stripe instead of 3 for 275.2, 274.9 2 stripes, 275.5 auto ML280
            break;
        case 76: //Scottie DX
            buildaudio_s(1080.0);
            break;
        case 8: //Robot 36
            buildaudio_r36();
            break;
        default:
            Serial.printf("Something went horribly wrong: unknown protocol while building audio!\n");
 //           exit(2);
            break;
    }

    if (!sstv_stop)
      addvistrailer() ;
/**/	
    
#ifdef AUDIO_AIFF    
    writefile_aiff() ;
#endif
#ifdef AUDIO_WAV
    writefile_wav();
#endif    

    // cleanup

//    fclose( g_imgfp ) ;
//    fclose( g_outfp ) ;
	
    input_file.close();
    output_file.close();	
    // brag
    
    uint32_t endtime = millis();	// time(NULL) ;
    Serial.printf( "Created output file in %d milliseconds.\n" , ( endtime - starttime ) ) ;
	
//    show_dir4();
//    delay(1000);	
//    play_pwm_file();
//    delay(10000);	
//    return 0 ;
}

void playtone( uint16_t tonefreq , double tonedur ) {
#ifdef SSTV_PWM
    int voltage;
    tonedur *= 0.97;
    tonefreq *= 1.014;	
#else
    uint16_t voltage;	
#endif	
    uint16_t tonesamples, i ;
    double   deltatheta ;
    
//    tonefreq += 20;  // increase frequency by 20 Hz
//    tonefreq *= 1.01333;  // increase frequency by scale.

	
    tonedur += g_fudge ;
    tonesamples = ( tonedur / g_uspersample ) + 0.5 ;
/*	
    if (tonesamples > MAXSAMPLES) {
	Serial.printf("Tonesamples overflow: %d \n", tonesamples); 
	tonesamples = MAXSAMPLES - 1;    
    }
*/	
    deltatheta = g_twopioverrate * tonefreq ;
    
//    for ( i=1 ; (i<=tonesamples && !sstv_stop_write && !sstv_stop && !Serial.available() && !BOOTSEL && digitalRead(10)); i++ ) {
    for ( i=1 ; (i<=tonesamples && !sstv_stop_write && !sstv_stop); i++ ) {
#ifdef AUDIO_AIFF        
        g_samples++ ;
        
        if ( tonefreq == 0 ) { g_audio[i] = 32768 ; }
        else {

            voltage = 32768 + (int)( sin( g_theta ) * g_scale ) ;
            g_audio[i] = voltage ;
            g_theta += deltatheta ;

        }
#endif
#ifdef AUDIO_WAV
        g_samples++ ;
        
        if ( tonefreq == 0 ) { g_audio[i] = 32768 ; }
        else {

            voltage =     0 + (int)( sin( g_theta ) * g_scale ) ;
            g_audio[i] = voltage ;
            g_theta += deltatheta ;

        }
#endif    
#ifdef SSTV_PWM
//	for(int j = 0; j < 2; j++) {	
          g_samples++ ;
 
//          if ( tonefreq == 0 ) { g_audio[j] = 32768 ; }		
          if ( tonefreq == 0 ) 
//	      g_audio[j] = (WRAP + 1)/2; 
	      voltage = (WRAP + 1)/2; 
          else {

//            voltage =     3 + (int)( sin( g_theta ) * 4.0 ) ;  // wrap 5+1
//            voltage =     (WRAP + 1)/2 + (int)( sin( g_theta ) * (float)((WRAP + 1)/2 + 0)) ; //   range is 1 to wrap - 1
            voltage =     (WRAP + 1)/2 + (int)( sin( g_theta ) * (float)((WRAP + 1)/2 + 1)) ; //   range is 1 to wrap - 1
	    if (voltage < 0)
	      voltage = 0;	    
/*		  
           int sine =  sin( g_theta ) * (float)((WRAP + 1)/2 + 1);
	   if (sine < ((-1)*((WRAP + 1)/2)))
	     sine = (WRAP + 1)/2;	   
           voltage = (WRAP + 1)/2 + sine ; 
*/		  
		  
//	    Serial.println(voltage);	
//	    g_audio[j] = voltage ;
            g_theta += deltatheta ;	

          }
// play it	
	 while ((micros() - sstv_micro_timer) < sstv_period)    { }
	 busy_wait_at_least_cycles(56);	// 454 ns    
///         avg_time += (micros() - sstv_micro_timer);
//    	 pwm_set_gpio_level(dds_pwm_pin, voltage);
    	 pwm_set_gpio_level(sstv_pwm_pin, voltage);
    	 sstv_micro_timer = micros();  
	    
//	 Serial.print(voltage);
//	 Serial.print(",");   
/*	  

	    prompt_count++;
	    if (prompt_count > prompt_count_max) {
		prompt_count = 0;
	//	Serial.println("Prompt!\n");   
		if (Serial.available() || BOOTSEL || !digitalRead(10))
//		if (BOOTSEL || !digitalRead(10))
		  sstv_stop = true;  
//		Serial.printf("a: %f4.1 ", (float)avg_time/(float)prompt_count_max); 
//		avg_time = 0;    
	    }
	    
*/	    
//	}
/*	    
	byte octet = (g_audio[0] & 0xf) + (((g_audio[1] & 0xf)) << 4);    
	int result = output_file.write(octet);
	if (result < 1) {
	  sstv_stop_write = true;
	  Serial.println("Output file write error");	
	}
*/	    
//	i++;   	    
#endif  		

    } // end for i        
    
    g_fudge = tonedur - ( tonesamples * g_uspersample ) ;
/*	
    for ( i=1 ; i<=tonesamples ; i++ ) {
#ifdef SSTV_PWM
 
#endif
//	output_file.write(g_audio[i] & 0xff00);  
    }
*/	
}
